# trt-efficientTAM

./: .gitignore  CMakeLists.txt  README.md
include/: EfficientTAM.h  image_decoder.h  image_encoder.h  memory_attention.h  memory_encoder.h  memory_manager.h  temporal_encoding_kernel.h  tensorrt_base.h
models/etam_fp16/: memory_encoder.engine
src/: EfficientTAM.cpp  image_decoder.cpp  image_encoder.cpp  main.cpp  memory_attention.cpp  memory_encoder.cpp  memory_manager.cpp  temporal_encoding_kernel.cu  tensorrt_base.cpp
